--- a/FaceyPhotos/Views/Shared/_Layout.cshtml
+++ b/FaceyPhotos/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Grad-Pack</a></li>
-                        <li><a class="dropdown-item" href="#">Its a Boy or Girl</a></li>
+                        <li><a class="dropdown-item" href="#">Baby Photos</a></li>
                         <li><a class="dropdown-item" href="#">Till Death do us Part</a></li>
                         <li><a class="dropdown-item" href="#">Gone too Soon</a></li>
                       </ul>
