--- a/FaceyPhotos/Areas/Identity/Pages/Account/Register.cshtml
+++ b/FaceyPhotos/Areas/Identity/Pages/Account/Register.cshtml
@@ -41,6 +41,20 @@
             <br/>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
+                <input asp-for="Input.PhoneNumber" class="form-control" aria-required="true" />
+                <label asp-for="Input.PhoneNumber"></label>
+                <span asp-validation-for="Input.PhoneNumber" class="text-danger"></span>
+            </div>
+            <br/>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-floating">
+                <input asp-for="Input.Parish" class="form-control" aria-required="true" />
+                <label asp-for="Input.Parish"></label>
+                <span asp-validation-for="Input.Parish" class="text-danger"></span>
+            </div>
+            <br/>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <div class="form-floating">
                 <input asp-for="Input.Address" class="form-control" aria-required="true" />
                 <label asp-for="Input.Address"></label>
                 <span asp-validation-for="Input.Address" class="text-danger"></span>
