--- a/FaceyPhotos/Views/Products/Details.cshtml
+++ b/FaceyPhotos/Views/Products/Details.cshtml
@@ -22,6 +22,24 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Cost)
         </dd>
+         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.SKU)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.SKU)
+        </dd>
+         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Quantity)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Quantity)
+        </dd>
+         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.details)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.details)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Created)
         </dt>
