--- a/FaceyPhotos/Views/Shared/_Layout.cshtml
+++ b/FaceyPhotos/Views/Shared/_Layout.cshtml
@@ -43,15 +43,23 @@
                       </a>
                       <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">Directors</a></li>
-                        <li><a class="dropdown-item" href="#">Facey and You</a></li>
                         <li><a class="dropdown-item" href="#">Contact Us</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="#">Customer Reviews</a></li>
                       </ul>
                     </li>
-                    <li class="nav-item">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
+                        @if (User.IsInRole("Webmaster"))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Inventory Management</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" asp-controller="Products" asp-action="Index">Products</a></li>
+                                    <li><a class="dropdown-item" href="#">Contact Us</a></li>
+                                    <li><hr class="dropdown-divider"></li>
+                                    <li><a class="dropdown-item" href="#">Customer Reviews</a></li>
+                                </ul>
+                            </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
