--- a/FaceyPhotos/Views/Products/Delete.cshtml
+++ b/FaceyPhotos/Views/Products/Delete.cshtml
@@ -28,13 +28,14 @@
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.SKU)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Quantity)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Quantity)
         </dd>
-        </dd><dt class = "col-sm-2">
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.details)
         </dt>
         <dd class = "col-sm-10">
