--- a/FaceyPhotos/Views/Products/Index.cshtml
+++ b/FaceyPhotos/Views/Products/Index.cshtml
@@ -25,7 +25,7 @@
                 @Html.DisplayNameFor(model => model.Quantity)
             </th>
              <th>
-                @Html.DisplayNameFor(model => model.details)
+                @Html.DisplayNameFor(model => model.Details)
             </th>
             <th></th>
         </tr>
@@ -43,7 +43,7 @@
                 @Html.DisplayFor(modelItem => item.SKU)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.details)
+                @Html.DisplayFor(modelItem => item.Details)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
