--- a/FaceyPhotos/Views/Products/Details.cshtml
+++ b/FaceyPhotos/Views/Products/Details.cshtml
@@ -35,16 +35,16 @@
             @Html.DisplayFor(model => model.Quantity)
         </dd>
          <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.details)
+            @Html.DisplayNameFor(model => model.Details)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.details)
+            @Html.DisplayFor(model => model.Details)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Created)
+            @Html.DisplayNameFor(model => model.DateCreated)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Created)
+            @Html.DisplayFor(model => model.DateCreated)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedBy)
@@ -53,10 +53,10 @@
             @Html.DisplayFor(model => model.CreatedBy)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Updated)
+            @Html.DisplayNameFor(model => model.DateUpdated)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Updated)
+            @Html.DisplayFor(model => model.DateUpdated)
         </dd>
     </dl>
 </div>
