Product Page Update

--- a/FaceyPhotos/Views/Shared/_Layout.cshtml
+++ b/FaceyPhotos/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                             <li class="nav-item dropdown">
                                 <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Inventory Management</a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                    <li><a class="dropdown-item" asp-controller="Products" asp-action="Index">Products</a></li>
+                                    <li><a class="dropdown-item" asp-controller="Products" asp-route-id="index">Product</a></li>
                                     <li><a class="dropdown-item" href="#">Contact Us</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item" href="#">Customer Reviews</a></li>
