--- a/FaceyPhotos/Views/Products/Delete.cshtml
+++ b/FaceyPhotos/Views/Products/Delete.cshtml
@@ -42,10 +42,10 @@
             @Html.DisplayFor(model => model.Details)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCreated)
+            @Html.DisplayNameFor(model => model.Created)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateCreated)
+            @Html.DisplayFor(model => model.Created)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreatedBy)
@@ -54,10 +54,10 @@
             @Html.DisplayFor(model => model.CreatedBy)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateUpdated)
+            @Html.DisplayNameFor(model => model.Updated)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DateUpdated)
+            @Html.DisplayFor(model => model.Updated)
         </dd>
     </dl>
     
