--- a/FaceyPhotos/Views/Products/Index.cshtml
+++ b/FaceyPhotos/Views/Products/Index.cshtml
@@ -43,6 +43,9 @@
                 @Html.DisplayFor(modelItem => item.SKU)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Quantity)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Details)
             </td>
             <td>
