--- a/FaceyPhotos/Views/Products/Create.cshtml
+++ b/FaceyPhotos/Views/Products/Create.cshtml
@@ -6,7 +6,6 @@
 
 <h1>Create Product</h1>
 
-<h4></h4>
 <hr />
 <div class="row">
     <div class="col-md-12">
@@ -37,8 +36,9 @@
                 <input asp-for="Details" class="form-control" />
                 <span asp-validation-for="Details" class="text-danger"></span>
             </div>
-            
+             <br/>          
             <div class="form-group">
+                <a asp-action="Index" class="btn btn-dark">Back to List</a>
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
